# wallee

./: Cargo.toml  README.md  build.rs
src/: backtrace.rs  chain.rs  context.rs  ensure.rs  error.rs  fmt.rs  kind.rs  lib.rs  location.rs  macros.rs  ptr.rs  wrapper.rs
tests/: test_autotrait.rs  test_backtrace.rs  test_boxed.rs  test_chain.rs  test_context.rs  test_convert.rs  test_downcast.rs  test_ensure.rs  test_ffi.rs  test_fmt.rs  test_location.rs  test_macros.rs  test_repr.rs  test_source.rs
tests/common/: mod.rs
