[package]
name = "wallee"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>", "Todd Hardman <todd.hardman@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Flexible concrete Error type built on std::error::Error with caller location tracking"
documentation = "https://docs.rs/wallee"
edition = "2018"
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tjhardman/wallee"
rust-version = "1.76"

[features]
default = ["std"]
std = []
backtrace = []

[dependencies]
# On compilers older than 1.65, features=["backtrace"] may be used to enable
# backtraces via the `backtrace` crate. This feature has no effect on 1.65+
# besides bringing in an unused dependency, as `std::backtrace` is always
# preferred.
# backtrace = { version = "0.3.51", optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0.6"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0.45"
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
